--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/About.form
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/About.form
@@ -449,6 +449,7 @@
                       <SubComponents>
                         <Component class="javax.swing.JTable" name="systemPropsTable">
                           <Properties>
+                            <Property name="cellSelectionEnabled" type="boolean" value="true"/>
                             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="null"/>
                             </Property>
