--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/MainWindow.form
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/MainWindow.form
@@ -1182,6 +1182,7 @@
   </Events>
   <AuxValues>
     <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="2"/>
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
@@ -1348,6 +1349,7 @@
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                                   <Connection code="new ProgressesJTableModel (_context.getModel ())" type="code"/>
                                 </Property>
+                                <Property name="autoStartEditOnKeyStroke" type="boolean" value="false"/>
                                 <Property name="columnControlVisible" type="boolean" value="true"/>
                                 <Property name="dragEnabled" type="boolean" value="true"/>
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
